[package]
name = "bm_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", features = [
    "bevy_winit",
    "bevy_render",
    "png",
    "x11",
] }
# block-mesh = "0.2.0"
csv = "1.2.0"
# derive = "1.0.0"
itertools = "0.11"
ndarray = "0.15.6"
num = "0.4.0"
polars = { version = "0.32.1" }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.93"
smooth-bevy-cameras = "0.9.0"
ordered-float = "3.6.0"
colorgrad = "0.6.2"
bevy_egui = "0.21.0"
bevy-aabb-instancing = { git = "https://github.com/cantudo/bevy_aabb_instancing.git", branch = "bv_0.11" }
mining_width_maintainer = { git = "https://github.com/cutlerjake/mining_width_maintainer.git", branch = "main" }
rfd = "0.12.0"
